log/build_2025-02-26_17-24-11/me495_yolo/stderr.log
  File "/home/catherine-maglione/yolo_backup/install/me495_yolo/lib/python3.12/site-packages/me495_yolo/square_mover.py", line 135
    if not self.tf_buffer.can_transform("camera_color_optical_frame", "turtlebot_position_april", rclpy.time.Time():
                                                                                                                   ^
SyntaxError: invalid syntax

